<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.opengl.GLSurfaceView
        android:id="@+id/cameraPreview_surfaceView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="4dp"
        android:visibility="visible"
        >

        <ImageButton
                android:id="@+id/settings_button"
                style="?borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/settings_icon"
                android:src="@drawable/ic_settings_white_24dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                />

        <ImageButton
                android:id="@+id/switch_camera"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/camera_switch_image"
                android:src="@drawable/ic_switch_camera_white_24dp"
                android:minWidth="48dp"
                android:minHeight="48dp"
                />

        <ImageButton
                android:id="@+id/mic_mute_button"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/microphone_image"
                android:src="@drawable/ic_mic_mute_on_24"
                android:minWidth="48dp"
                android:minHeight="48dp"
                />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/stream_live_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="8dp"
            android:background="@drawable/rounded_live"
            android:padding="5dp"
            android:text="@string/live_indicator"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="24dp"
        android:visibility="visible"
        >


        <Button
                android:id="@+id/toggle_service"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_broadcasting"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                />
        <Button
                android:id="@+id/toggle_broadcasting"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start_broadcasting"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>